# angular-samples

./: .bazelrc  .gitignore  .prettierrc  BUILD.bazel  Dockerfile  Jenkinsfile  LICENSE.md  WORKSPACE  angular-metadata.tsconfig.json  angular.tsconfig.json  app.component.js  app.component.js.map  app.component.metadata.json  app.component.ts  app.js  app.js.map  app.module.js  app.module.js.map  app.module.metadata.json  app.module.ts  app.routes.js  app.routes.js.map  app.routes.metadata.json  app.routes.ts  app.ts  bower.json  bs-config.js  build-i18n.sh  contract.json  defs.bzl  demo-app.html  demo-page.html  demo-page.js  demo-page.js.map  demo-page.metadata.json  demo-page.ts  directory.js  docker-compose-base.yml  docker-compose-run.yml  docker-compose-watch.yml  (+63 more)
rules/webpack/: BUILD.bazel  webpack.bzl  webpack.config.tmpl.js
src/apps/api/: BUILD.bazel  add-service.ts  api-map.json  car-data.ts  index-browserify.html  index-closure.html  index-i18n.html  index-ng-upgrade.html  index-parcel.html  index-rollup-es6.html  index-rollup-lazy.html  index-rollup.html  index-webpack-babili.html  index-webpack-lazy-loading.html  index-webpack-no-angular-optimizations.html  index-webpack-no-lazy-loading.html  index.html  person-service.ts  server.ts  site.css
src/apps/backend/src/: BUILD.bazel  CarsServlet.java  FriendServlet.java  LogServlet.java  PersonServlet.java  main.go
src/apps/bundler-comparison-app/: BUILD.bazel  app.module.ts  app.routes.ts  demo.component.ts  main-jit.ts  server.ts
src/apps/demo-app/: BUILD.bazel  app.component.ts  app.module.ts  app.routes.ts  demo-app.html  rollup.config.js
src/apps/demo-app/webpack/: BUILD.bazel  webpack.bzl
src/apps/main-demo-app/: BUILD.bazel  app.component.ts  app.module.ts  app.routes.ts  demo-app.html  demo-page.ts  index.html
src/apps/models/: BUILD.bazel  index.ts
src/apps/models/car/: BUILD.bazel  car.proto  car.ts
src/apps/models/friend/: BUILD.bazel  friend.proto  friend.ts
src/apps/models/log/: BUILD.bazel  log.proto  log.ts
src/apps/models/person/: BUILD.bazel  person.proto  person.ts
src/apps/ng-upgrade-app/: BUILD.bazel  upgrade-module.ts  upgrade.ts
src/apps/shared-components/: BUILD.bazel  demo-page.module.ts  demo-page.ts  shared.module.ts
src/apps/shared-components/about/: BUILD.bazel  about.component.html  about.component.ts  about.module.ts
src/apps/shared-components/access-child-components/: BUILD.bazel  access-child.module.ts  parent.ts
src/apps/shared-components/adder/: adder.module.ts
src/apps/shared-components/address-form/: BUILD.bazel  address-form.html  address-form.module.ts  address-form.ts
src/apps/shared-components/airplane/: BUILD.bazel  airplane.component.ts  airplane.module.ts
src/apps/shared-components/algorithms/: BUILD.bazel  algorithms.module.ts  algorithms.ts  insertion-sort.scss  insertion-sort.service.ts  insertion-sort.ts
src/apps/shared-components/aux-route/: message.ts
src/apps/shared-components/bound-textbox/: BUILD.bazel  bound-textbox.module.ts  bound-textbox.ts
src/apps/shared-components/change-detection/: BUILD.bazel  change-detection.module.ts  comment-demo.ts
src/apps/shared-components/contact-list/: BUILD.bazel  contact-list.html  contact-list.module.ts
src/apps/shared-components/counter/: counter.ts
src/apps/shared-components/dependency-injection/: BUILD.bazel  address-book-service.ts  address-book-title-service.ts  address-book.html  address-book.module.ts  address-book.ts
src/apps/shared-components/grid/: BUILD.bazel  column.ts  grid-demo.ts  grid.module.ts  sorter.ts
src/apps/shared-components/http/: BUILD.bazel  http.sample.module.ts  http.ts
src/apps/shared-components/input-controls/: BUILD.bazel  input-controls.module.ts
src/apps/shared-components/input-output/: input-output-demo.ts  input-output.module.ts
src/apps/shared-components/insertion-sort/: insertion-sort.ts
src/apps/shared-components/jquery-integration/: BUILD.bazel  jquery-integration.module.ts
src/apps/shared-components/lazy-loaded/: lazy-loaded.ts  lazy-message.ts
src/apps/shared-components/lazy-loaded-tree-view/: BUILD.bazel  country-demo.ts  lazy-loaded-tree-view.module.ts  tree-node.ts
src/apps/shared-components/log-tail/: BUILD.bazel  log-action.ts  log-demo.ts  log-reducer.ts  log-tail-service.ts  log-tail.module.ts  store.ts
src/apps/shared-components/non-bindable/: non-bindable.ts
src/apps/shared-components/pub-sub/: BUILD.bazel  consumer.ts  customer-event-emitter.ts  pub-sub-service.ts  pub-sub.module.ts
src/apps/shared-components/react-integration/: BUILD.bazel  angular-2-host.html  angular-2-host.ts  angular-host.html  angular-host.ts  country-view-model.ts  merge-sort.component.tsx  partition.ts  react-integration.module.ts  react-tree-view.tsx  sorting-service.ts  sorting.component.tsx
src/apps/shared-components/rxjs-buffering/: BUILD.bazel  rxjs-buffering.module.ts  rxjs-buffering.ts
src/apps/shared-components/rxjs-caching/: BUILD.bazel  caching-demo.html  caching-demo.ts  friends-list.ts  friends-service.ts  rxjs-caching.module.ts
src/apps/shared-components/rxjs-error-handling/: BUILD.bazel  car.service.ts  cars.component.ts  rxjs-error-handling.module.ts
src/apps/shared-components/rxjs-streams/: BUILD.bazel  rxjs-streams.module.ts  rxjs-streams.scss  rxjs-streams.ts
src/apps/shared-components/shared/: BUILD.bazel  shared.module.ts
src/apps/shared-components/spreadsheet/: BUILD.bazel  header-row-service.ts  key-map.ts  spreadsheet.module.ts  spreadsheet.scss  spreadsheet.ts  spreadsheetModel.ts
src/apps/shared-components/survey/: BUILD.bazel  survey.module.ts
src/apps/shared-components/svelte-integration/: BUILD.bazel  svelte.component.ts  svelte.module.ts
src/apps/shared-components/text-editor/: BUILD.bazel  character.ts  document.ts  key-map.ts  text-editor.module.ts  text-editor.ts
src/apps/shared-components/tree-view/: BUILD.bazel  tree-view-demo.ts  tree-view.module.ts
src/apps/svelte-demo/: App.html  BUILD.bazel  app.scss  index.html  main.js
src/apps/svelte-demo/friends/: BUILD.bazel  Friend.html  (+4 more)
(+3141 files in other folders)
