load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

exports_files([
  "webpack.config.tmpl.js",
])

nodejs_binary(
    name = "webpack_bundler",
    entry_point = "webpack/bin/webpack.js",
    tags = ["ibazel_notify_changes"],
    visibility = ["//visibility:public"],
    data = [
      "@npm//webpack",
      "@npm//webpack-cli",
    ]
)