load("@build_bazel_rules_nodejs//:defs.bzl", "rollup_bundle", "nodejs_binary")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

load("@io_bazel_rules_docker//container:container.bzl", "container_push")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")

load("//rules/vendor:vendor.bzl", "vendor_bundle")

vendor_bundle(
  name = "vendor",
  deps = [
    "@npm//node_modules/jquery:dist/jquery.min.js",
    "@npm//node_modules/zone.js:dist/zone.min.js",
    "@npm//node_modules/jquery-ui-dist:jquery-ui.min.js",
    "@npm//node_modules/react:umd/react.production.min.js",
    "@npm//node_modules/react-dom:umd/react-dom.production.min.js"
  ]
)

ts_library(
    name = "ts_api",
    srcs = glob(["*.ts"]),
    tsconfig = "//:tsconfig.json",
    deps = ["//src/apps/models", 
            "@npm//@types/node",
            "@npm//@types/react",
            "@npm//express",
            "@npm//reload",
            "@npm//compression",
            "@npm//request",
    ]
)

filegroup(
    name = "static",
    srcs = glob(["*.html", "*.css"]),
)

genrule(
    name = "bootstrap",
    srcs = ["//:node_modules/bootstrap/dist/css/bootstrap.min.css"],
    outs = ["bootstrap.min.css"],
    cmd = "cp $< $@",
)

nodejs_binary(
    name = "api", 
    data = [":ts_api", 
            ":static",
            "@npm//express",
            ":bootstrap",
            ":vendor",
            "@npm//compression",
            "@npm//request",
            "@npm//reload",
            "//src/apps/demo-app:bundle",
            "//src/apps/svelte-demo:bundle_svelte"
    ],
    entry_point = "../server.js",
)

nodejs_image(
    name = "app_image",
    entry_point = "angular_samples/src/apps/api/server.js",
    node_modules = "@npm//:node_modules",
    data = [":ts_api", 
            ":static",
            "@npm//express",
            ":api-map.json",
            ":bootstrap",
            ":vendor",
            "@npm//compression",
            "@npm//request",
            "@npm//reload",
            "//src/apps/demo-app:bundle",
            "//src/apps/svelte-demo:bundle_svelte"
    ],
)

container_push(
   name = "push",
   image = ":app_image",
   format = "Docker",
   registry = "index.docker.io",
   repository = "thelgevold/angular-samples",
   tag = "10"
)