package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")

ng_module(
    name = "src",
    srcs = glob(["*.ts"]),
    tsconfig = "//:tsconfig.json",
    deps = ["@rxjs", 
            "//src/apps/shared-components:src",
            "//src/apps/shared-components/spreadsheet:src",
            "//src/apps/shared-components/lazy-loaded-tree-view:src",
            "//src/apps/shared-components/rxjs-streams:src",
            "//src/apps/shared-components/algorithms:src",
            "//src/apps/shared-components/rxjs-buffering:src",
            "//src/apps/shared-components/survey:src",
            "//src/apps/shared-components/pub-sub:src",
            "//src/apps/shared-components/text-editor:src",
            "//src/apps/shared-components/input-controls:src",
            "//src/apps/shared-components/tree-view:src",
            "//src/apps/shared-components/grid:src",
            "//src/apps/shared-components/input-output:src",
            "//src/apps/shared-components/log-tail:src",
    ]
)

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary", "rollup_bundle")

rollup_bundle(
    name = "rollup",
    entry_point = "src/apps/bundler-comparison-app/main",
    deps = [":src"],
)