package(default_visibility = ["//visibility:public"])
load("@build_bazel_rules_nodejs//:defs.bzl", "rollup_bundle")
load("@npm_angular_bazel//:index.bzl", "ng_module")

NG_FACTORY_ADDED_IMPORTS = [
    "@npm//@angular/animations",
    "@npm//@angular/forms",
]

ng_module(
    name = "src",
    srcs = [
      "main.ts", 
      "app.module.ts",
      "app.component.ts",
      "app.routes.ts"
    ],
    assets = ["demo-app.html"],
    tsconfig = "//:tsconfig.json",
    deps = NG_FACTORY_ADDED_IMPORTS + [
            "@npm//rxjs",
            "@npm//@types/node",
            "@npm//@types/react",
            "@npm//@angular/core",
            "@npm//@angular/router",
            "@npm//@angular/platform-browser",
            "//src/apps/shared-components:src",
            "//src/apps/shared-components/about:src",
            "//src/apps/shared-components/spreadsheet:src",
            "//src/apps/shared-components/jquery-integration:src",
            "//src/apps/shared-components/lazy-loaded-tree-view:src",
            "//src/apps/shared-components/dependency-injection:src",
            "//src/apps/shared-components/rxjs-streams:src",
            "//src/apps/shared-components/rxjs-caching:src",
            "//src/apps/shared-components/algorithms:src",
            "//src/apps/shared-components/log-tail:src",
            "//src/apps/shared-components/rxjs-buffering:src",
            "//src/apps/shared-components/survey:src",
            "//src/apps/shared-components/pub-sub:src",
            "//src/apps/shared-components/text-editor:src",
            "//src/apps/shared-components/address-form:src",
            "//src/apps/shared-components/change-detection:src",
            "//src/apps/shared-components/input-controls:src",
            "//src/apps/shared-components/tree-view:src",
            "//src/apps/shared-components/grid:src",
            "//src/apps/shared-components/access-child-components:src",
            "//src/apps/shared-components/contact-list:src",
            "//src/apps/shared-components/bound-textbox:src",
            "//src/apps/shared-components/input-output:src",
            "//src/apps/shared-components/rxjs-error-handling:src",
            "//src/apps/shared-components/svelte-integration:src"
    ]
)

rollup_bundle(
    name = "bundle",
    additional_entry_points = [
    ],
    entry_point = "src/apps/demo-app/main",
    deps = [
        ":src",
    ],
)
