package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")

ng_module(
    name = "src",
    srcs = glob(["*.ts"]),
    assets = ["demo-app.html"],
    tsconfig = "//:tsconfig.json",
    deps = ["@rxjs", 
            "//src/apps/shared-components:src",
            "//src/apps/shared-components/about:src",
            "//src/apps/shared-components/spreadsheet:src",
            "//src/apps/shared-components/jquery-integration:src",
            "//src/apps/shared-components/http:src",
            "//src/apps/shared-components/lazy-loaded-tree-view:src",
            "//src/apps/shared-components/dependency-injection:src",
            "//src/apps/shared-components/rxjs-streams:src",
            "//src/apps/shared-components/rxjs-caching:src",
            "//src/apps/shared-components/algorithms:src",
            "//src/apps/shared-components/log-tail:src",
            "//src/apps/shared-components/rxjs-buffering:src",
            "//src/apps/shared-components/survey:src",
            "//src/apps/shared-components/pub-sub:src",
            "//src/apps/shared-components/text-editor:src",
            "//src/apps/shared-components/address-form:src",
            "//src/apps/shared-components/change-detection:src",
            "//src/apps/shared-components/input-controls:src",
            "//src/apps/shared-components/tree-view:src",
            "//src/apps/shared-components/grid:src",
            "//src/apps/shared-components/access-child-components:src",
            "//src/apps/shared-components/contact-list:src",
            "//src/apps/shared-components/bound-textbox:src",
            "//src/apps/shared-components/input-output:src",
            "//src/apps/shared-components/rxjs-error-handling:src",
            "//src/apps/shared-components/react-integration:src",
            "//src/apps/shared-components/airplane:src",
    ]
)

load("@build_bazel_rules_typescript//:defs.bzl", "ts_devserver")

ts_devserver(
    name = "devserver",
    port = 4000,
    entry_module = "angular_samples/src/apps/main-demo-app/main",
    scripts = [
      "//:angular_bundles"
    ],
    serving_path = "/bundle.min.js",
    deps = [":src"]
)
