package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "models",
    srcs = glob(["index.ts"]),
    tsconfig = "//:tsconfig.json",
    deps = ["//src/apps/models/friend:friend_ts_proto",
            "//src/apps/models/car:car_ts_proto",
            "//src/apps/models/person:person_ts_proto",
            "//src/apps/models/log:log_ts_proto",
            "@npm//@types/node",
            "@npm//@types/react"
    ]
)