package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "models",
    srcs = glob(["index.ts"]),
    tsconfig = "//:tsconfig.json",
    deps = [
            "@npm//@types/node",
            "@npm//@types/react",
            "//src/apps/models/car",
            "//src/apps/models/friend",
            "//src/apps/models/log",
            "//src/apps/models/person"
    ]
)