package(default_visibility = ["//visibility:public"])

load("@npm_angular_bazel//:index.bzl", "ng_module")

ng_module(
    name = "src",
    srcs = ["demo-page.module.ts", "demo-page.ts"],
    tsconfig = "//:tsconfig.json",
    deps = ["@npm//rxjs", 
            "@npm//@angular/core",
            "@npm//@angular/common",
            "@npm//@angular/forms",
            "@npm//@angular/router",
            "//src/apps/shared-components/shared"     
    ]
)