package(default_visibility = ["//visibility:public"])
load("@build_bazel_rules_svelte//:defs.bzl", "svelte", "bundle_dev")

svelte(
  name = "App",
  srcs = ["main.js"],
  entry_point = "App.html",
  deps = [
    "//src/apps/svelte-demo/friends:Friends"
  ]
)

bundle_dev(
  name = "bundle_svelte",
  entry_point = "main.js",
  deps = [
    ":App"
  ],
)
