package(default_visibility = ["//visibility:public"])

load("@npm_angular_bazel//:index.bzl", "ng_module")

ng_module(
    name = "src",
    srcs = glob(["*.ts"]),
    tsconfig = "//:tsconfig.json",
    assets = ["address-form.html"],
    deps = [
            "//src/apps/shared-components/shared",
            "@npm//@angular/core",  
            "@npm//@angular/forms",
            "@npm//@angular/router",
    ]
)