
package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")
ng_module(
    name = "src",
    srcs = ["airplane.module.ts", "airplane.component.ts"],
    deps = [
        "@rxjs",
         "//src/apps/shared-components/airplane/team0",
        "//src/apps/shared-components/airplane/team1",
        "//src/apps/shared-components/airplane/team2",
        "//src/apps/shared-components/airplane/team3",
        "//src/apps/shared-components/airplane/team4",
        "//src/apps/shared-components/airplane/team5",
        "//src/apps/shared-components/airplane/team6",
        "//src/apps/shared-components/airplane/team7",
        "//src/apps/shared-components/airplane/team8",
        "//src/apps/shared-components/airplane/team9"
    ],
    tsconfig = "//:tsconfig.json",
)
