package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//sass:sass.bzl", "sass_binary")

sass_binary(
    name = "insertion-sort-styles",
    src = "insertion-sort.scss"
)
 

ng_module(
    name = "src",
    srcs = glob(["**/*.ts"]),
    assets = [":insertion-sort-styles"],
    tsconfig = "//:tsconfig.json",
    deps = [
            "@rxjs",
            "//src/apps/shared-components/shared"     
    ]
)