package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")

ng_module(
    name = "src",
    srcs = glob(["*.ts"]),
    tsconfig = "//:tsconfig.json",
    assets = ["change-detection.html", "comment-demo.html"],
    deps = [
            "//src/apps/shared-components/shared"     
    ]
)