package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")

ng_module(
    name = "src",
    srcs = glob(["*.ts"]),
    tsconfig = "//:tsconfig.json",
    assets = ["address-book.html"],
    deps = [
            "@rxjs",
            "//src/apps/shared-components/shared",
            "//src/apps/models" 
    ]
)