package(default_visibility = ["//visibility:public"])

load("@npm_angular_bazel//:index.bzl", "ng_module")

ng_module(
    name = "src",
    srcs = glob(["*.ts"]),
    tsconfig = "//:tsconfig.json",
    assets = ["address-book.html"],
    deps = [
            "@npm//rxjs",
            "//src/apps/shared-components/shared",
            "@npm//@angular/core",
            "//src/apps/models",
            "@npm//@angular/router",
            "@npm//@angular/common",
            "@npm//@angular/forms",
    ]
)