package(default_visibility = ["//visibility:public"])

load("@npm_angular_bazel//:index.bzl", "ng_module")

ng_module(
    name = "src",
    srcs = glob(["*.ts"]),
    assets = ["grid.html"],
    tsconfig = "//:tsconfig.json",
    deps = [
            "//src/apps/shared-components/shared",
            "@npm//@angular/core",
            "@npm//@angular/router",
            "@npm//@angular/forms",
    ]
)