package(default_visibility = ["//visibility:public"])

load("@npm_angular_bazel//:index.bzl", "ng_module")

ng_module(
    name = "src",
    srcs = glob(["*.ts"]),
    assets = ["jquery-integration.html"],
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@angular/core",
        "@npm//@angular/router",
        "@npm//@angular/forms",
        "//src/apps/shared-components/shared"     
    ]
)