package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "react",
    srcs = ["react-tree-view.tsx", "country-view-model.ts"],
    tsconfig = "//:tsconfig.json"
)

ng_module(
    name = "src",
    srcs = ["angular-host.ts", "react-integration.module.ts"],
    assets = ["angular-host.html"],
    tsconfig = "//:tsconfig.json",
    deps = [
            "//src/apps/shared-components/shared",
            ":react",
            "@npm//@types"
    ]
)