package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "react",
    deps = ["@npm//@types/node", 
            "@npm//@types/react",
            "@npm//react",
            "@npm//react-dom",
    ],
    srcs = ["sorting.component.tsx",
            "merge-sort.component.tsx",
            "partition.ts",
            "sorting-service.ts"],
    tsconfig = "//:tsconfig.json"
)

ng_module(
    name = "src",
    srcs = ["angular-host.ts", "react-integration.module.ts"],
    assets = ["angular-host.html"],
    tsconfig = "//:tsconfig.json",
    deps = [
            "//src/apps/shared-components/shared",
            ":react",
            "@npm//@types/node"
    ]
)